# MAEC

./: .gitignore  README.md  child_run.json  execution_run.json  maec_contract.py  main.py  parent_run.json  pyproject.toml  test.py
examples/: multi_agent_orchestration.py
maec/: __init__.py  core.py  rating.py
maec.egg-info/: PKG-INFO  SOURCES.txt
